--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,93 +18,7 @@
 <script th:src="@{/js/bootstrap.bundle.js}"></script>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2a5470;">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/test}">
-                <img th:src="@{/img/logo_v3-2.png}" alt="logo" width="50" height="50" class="d-inline-block align-text-middle">
-                Port Świnoujście
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/test}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/}">Old Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/show_all_ships}">Statki_New</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/showArrivalShips}">Statki_Old</a>
-                    </li>
-                </ul>
-
-                <div th:if="${session['username'] != null}">
-                    <div class="btn-group">
-                        <div class="btn-group dropstart" role="group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="visually-hidden">Toggle Dropstart</span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <a class="dropdown-item" th:href="@{/profile}">Profil</a>
-                                <a class="dropdown-item" th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
-                                <a class="dropdown-item" th:href="@{/logout}">Wyloguj</a>
-                            </ul>
-                        </div>
-                        <a th:href="@{/profile}" class="btn btn-secondary" role="button" th:text="'Witaj ' + ${username} + '!'"></a>
-                    </div>
-                </div>
-                <div th:if="${session['username'] == null}">
-                    <div class="btn-group">
-                        <div class="btn-group dropstart" role="group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="visually-hidden">Toggle Dropstart</span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <a class="dropdown-item" th:href="@{/register}">Rejestracja</a>
-                                <a class="dropdown-item" th:href="@{/login}">Zaloguj</a>
-                            </ul>
-                        </div>
-                        <a th:href="@{/login}" class="btn btn-secondary" role="button" th:text="'Nie zalogowano'"></a>
-                    </div>
-                </div>
-
-<!--                <div th:if="${session['username'] == null}">-->
-<!--                    <div class="user-dropdown">-->
-<!--                        <span th:text="Gość"></span>-->
-<!--                        <div class="dropdown-content">-->
-<!--                            <a class="dropdown-item" th:href="@{/register}">Rejestracja</a>-->
-<!--                            <a class="dropdown-item" th:href="@{/login}">Zaloguj</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <span class="navbar-text px-2">-->
-<!--                    Witaj {name here} !-->
-<!--                </span>-->
-
-<!--                <div class="btn-group dropstart">-->
-<!--                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">-->
-<!--                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>-->
-<!--                        </svg>-->
-<!--                    </button>-->
-<!--                    <ul class="dropdown-menu">-->
-<!--                        <li><a class="dropdown-item" href="#">Regular link</a></li>-->
-<!--                        <li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Disabled link</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Another link</a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-
-            </div>
-        </div>
-    </nav>
+    <div th:replace="~{/components/navbar::nav}"></div>
 </header>
 
 <main style="padding: 10px">
@@ -180,11 +94,9 @@
 <!--    </footer>-->
 <!--</div>-->
 
-<footer class="footer mt-auto py-3" style="background-color: #2a5470" >
-    <div class="container">
-        <span class="text-light">Place sticky footer content here.</span>
-    </div>
-</footer>
+    <footer>
+        <div th:replace="~{/components/footer::ft}"></div>
+    </footer>
 
 </body>
 </html>
