--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,43 +3,35 @@
 <th:block th:import="com.example.ships.model.Role"></th:block>
 <head>
     <title>Logowanie</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 </head>
-<body>
-<nav>
-    <a th:href="@{/}"><span class="home">Home</span></a>
-    <div th:if="${session['username'] != null}" class="welcome-message">
-        <div class="user-dropdown">
-            <span th:text="'Witaj ' + ${username} + '!'"></span>
-            <div class="dropdown-content">
-                <a th:href="@{/logout}">Wyloguj</a>
-                <a th:href="@{/profile}">Profil</a>
-                <a th:if="${isAdmin}" th:href="@{/admin}">Panel Administracyjny</a>
-            </div>
-        </div>
-    </div>
 
-    <div th:if="${session['username'] == null}" class="welcome-message">
-        <div class="user-dropdown">
-            <span th:text="Gość"></span>
-            <div class="dropdown-content">
-                <a th:href="@{/register}">Rejestracja</a>
-            </div>
+<body>
+    <script th:src="@{/js/bootstrap.bundle.js}"></script>
+
+    <header>
+        <div th:replace="~{/components/navbar::nav}"></div>
+    </header>
+
+    <main>
+        <div class="container">
+            <h1>Logowanie</h1>
+            <form action="/login" method="POST">
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email"><br>
+                <label for="password">Hasło:</label><br>
+                <input type="password" id="password" name="password"><br>
+                <div th:if="${error}" class="error">
+                    <p th:text="${error}"></p>
+                </div>
+                <input type="submit" value="Zaloguj"><br>
+            </form>
         </div>
-    </div>
-</nav>
-<div class="container">
-    <h1>Logowanie</h1>
-    <form action="/login" method="POST">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br>
-        <label for="password">Hasło:</label><br>
-        <input type="password" id="password" name="password"><br>
-        <div th:if="${error}" class="error">
-            <p th:text="${error}"></p>
-        </div>
-        <input type="submit" value="Zaloguj"><br>
-    </form>
-</div>
+    </main>
+
+    <footer>
+        <div th:replace="~{/components/footer::ft}"></div>
+    </footer>
 </body>
 </html>
