--- a/src/main/resources/templates/show_all_ships.html
+++ b/src/main/resources/templates/show_all_ships.html
@@ -8,15 +8,9 @@
 
 <body>
   <script th:src="@{/js/bootstrap.bundle.js}"></script>
+
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2a5470;">
-      <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/test}">
-          <img th:src="@{/img/logo_v3-2.png}" alt="logo" width="50" height="50" class="d-inline-block align-text-middle">
-          Port Świnoujście
-        </a>
-      </div>
-    </nav>
+    <div th:replace="~{/components/navbar::nav}"></div>
   </header>
 
   <main>
@@ -58,7 +52,7 @@
   </main>
 
   <footer>
-
+    <div th:replace="~{/components/footer::ft}"></div>
   </footer>
 
 </body>
