--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -13,22 +13,17 @@
     /*<![CDATA[*/
     /*]]>*/
   </script>
+
 </head>
 
 <body>
+  <script th:src="@{/js/bootstrap.bundle.js}"></script>
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2a5470;">
-    <div class="container-fluid">
-      <a class="navbar-brand" th:href="@{/test}">
-        <img th:src="@{/img/logo_v3-2.png}" alt="logo" width="50" height="50" class="d-inline-block align-text-middle">
-        Port Świnoujście
-      </a>
-    </div>
-  </nav>
-</header>
+  <header>
+    <div th:replace="~{/components/navbar::nav}"></div>
+  </header>
 
-<main>
+  <main>
   <div class="container-fluid align-content-center">
     <div class="card text-dark bg-warning mb-3" style="max-width: 18rem; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px;">
       <div th:if="${session['username'] == null}" class="card-header">User Name Goes Here</div>
@@ -41,11 +36,9 @@
   </div>
 </main>
 
-<footer class="footer mt-auto py-3" style="background-color: #2a5470" >
-  <div class="container align-content-center">
-    <p class="text-light">Footer goes here.</p>
-  </div>
-</footer>
+  <footer>
+    <div th:replace="~{/components/footer::ft}"></div>
+  </footer>
 
 </body>
 </html>
