Update: Minor updates to views

--- a/src/main/resources/templates/show_all_ships.html
+++ b/src/main/resources/templates/show_all_ships.html
@@ -14,8 +14,8 @@
   </header>
 
   <main>
-    <div class="container">
-      <table class="table table-dark table-striped">
+    <div class="container my-5">
+      <table class="table table-dark table-striped table-bordered table-hover">
         <thead>
         <tr>
           <th>Identyfikator</th>
