--- a/src/main/resources/templates/components/footer.html
+++ b/src/main/resources/templates/components/footer.html
@@ -9,8 +9,18 @@
 <body>
     <script th:src="@{/js/bootstrap.bundle.js}"></script>
     <footer th:fragment="ft" class="footer mt-auto py-3" style="background-color: #2a5470" >
-        <div class="container">
-            <span class="text-light">Place sticky footer content here.</span>
+        <div class="container-fluid">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-muted">©2023 Pollub Enterprises INC</p>
+
+                <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                    <img th:src="@{/img/logo_v3-2.png}" alt="logo" width="30" height="30" class="d-inline-block align-text-middle">
+                </a>
+
+                <ul class="nav col-md-4 justify-content-end">
+                    <li class="nav-item"><a th:href="@{/}" class="nav-link px-2 text-muted">Home</a></li>
+                </ul>
+            </footer>
         </div>
     </footer>
 </body>
