--- a/src/main/resources/templates/components/navbar.html
+++ b/src/main/resources/templates/components/navbar.html
@@ -12,7 +12,7 @@
   <header>
     <nav th:fragment="nav" class="navbar navbar-expand-lg navbar-dark" style="background-color: #2a5470;">
       <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/test}">
+        <a class="navbar-brand" th:href="@{/}">
           <img th:src="@{/img/logo_v3-2.png}" alt="logo" width="50" height="50" class="d-inline-block align-text-middle">
           Port Świnoujście
         </a>
@@ -24,16 +24,39 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" th:href="@{/test}">Home</a>
+              <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" th:href="@{/}">Old Home</a>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Statki
+              </a>
+              <div th:if="${session['username'] != null}">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" aria-current="page" th:href="@{/show_all_ships}">Tabela Przypłynięć</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" aria-current="page" th:href="@{/addShip}">Dodaj Statek</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" aria-current="page" th:href="@{/placeholder}">Zaimportuj listę statków z pliku</a>
+                  <a class="dropdown-item" aria-current="page" th:href="@{/placeholder}">Eksportuj listę statków do pliku</a>
+                </div>
+              </div>
+              <div th:if="${session['username'] == null}">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" aria-current="page" th:href="@{/show_all_ships}">Tabela Przypłynięć</a>
+                </div>
+              </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" th:href="@{/show_all_ships}">Statki_New</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" th:href="@{/showArrivalShips}">Statki_Old</a>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Debug
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" aria-current="page" th:href="@{/old_home}">Old Home</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" aria-current="page" th:href="@{/showArrivalShips}">Statki_Old</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" th:href="@{/placeholder}">Placeholder</a>
+              </div>
             </li>
           </ul>
 
