--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 
     <title>Home</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -14,88 +15,131 @@
     </script>
 </head>
 <body>
-<script th:src="@{/js/bootstrap.bundle.js}"></script>
-
+<script th:src="@{/js/bootstrap.js}"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <header>
     <div th:replace="~{/components/navbar::nav}"></div>
 </header>
 
+
 <main class="my-5">
-    <div class="container">
+    <div class="container my-3">
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" data-bs-interval="150000">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" th:src="@{${'/img/img1.jpg'}}" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Port Śinoujście</h5>
+                            <p>Tak, jesteśy portem morskim w świnoujściu</p>
+                        </div>
+                    </div>
 
-        <div>
-            Corousel here
+                    <div class="carousel-item" data-bs-interval="150000">
+                        <img class="d-block w-100" th:src="@{${'/img/img3.jpg'}}" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Statek</h5>
+                            <p>O cholera! Toż to statek</p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item" data-bs-interval="150000">
+                        <img class="d-block w-100" th:src="@{${'/img/img2.jpg'}}" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Port nocą</h5>
+                            <p>Kurde, ale te światła dają po oczach!</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
 
-        <div class="row">
-            <div class="col">
-                <div class="card-group">
-                    <div class="card">
-                        <img
-                                src="https://picsum.photos/id/200/320/200"
-                                class="card-img-top"
-                                alt="..."
-                        />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
+        <div class="container my-3">
+            <div class="row">
+                <div class="col">
+                    <div class="card-group">
+                        <div class="card">
+                            <img
+                                    src="https://picsum.photos/id/200/320/200"
+                                    class="card-img-top"
+                                    alt="..."
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit
+                                    longer.
+                                </p>
 
-                            <div class="">
-                                <a href="#"
-                                ><button type="button" class="btn btn-primary">
-                                    Read more
-                                </button></a
-                                >
+                                <div class="">
+                                    <a href="#"
+                                    ><button type="button" class="btn btn-primary">
+                                        Read more
+                                    </button></a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img
-                                src="https://picsum.photos/id/201/320/200"
-                                class="card-img-top"
-                                alt="..."
-                        />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This card has supporting text below as a natural lead-in to
-                                additional content.
-                            </p>
+                        <div class="card">
+                            <img
+                                    src="https://picsum.photos/id/201/320/200"
+                                    class="card-img-top"
+                                    alt="..."
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    This card has supporting text below as a natural lead-in to
+                                    additional content.
+                                </p>
 
-                            <div class="">
-                                <a href="#"
-                                ><button type="button" class="btn btn-primary">
-                                    Read more
-                                </button></a
-                                >
+                                <div class="">
+                                    <a href="#"
+                                    ><button type="button" class="btn btn-primary">
+                                        Read more
+                                    </button></a
+                                    >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img
-                                src="https://picsum.photos/id/202/320/200"
-                                class="card-img-top"
-                                alt="..."
-                        />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This card has even longer
-                                content than the first to show that equal height action.
-                            </p>
+                        <div class="card">
+                            <img
+                                    src="https://picsum.photos/id/202/320/200"
+                                    class="card-img-top"
+                                    alt="..."
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This card has even longer
+                                    content than the first to show that equal height action.
+                                </p>
 
-                            <div class="">
-                                <a href="#"
-                                ><button type="button" class="btn btn-primary">
-                                    Read more
-                                </button></a
-                                >
+                                <div class="">
+                                    <a href="#"
+                                    ><button type="button" class="btn btn-primary">
+                                        Read more
+                                    </button></a
+                                    >
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -114,44 +158,6 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <div class="card" style="background-color: #6fabd9; height: fit-content">
-                        <img th:src="@{/img/logo_v2.png}" class="card-img-top" width="128" alt="logo">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="card" style="background-color: #6fabd9;  height: fit-content">
-                        <div class="card-header">
-                            Featured
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">An item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="card" style="background-color: #6fabd9; height: fit-content">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </main>
